--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,13 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --pokemon: #717171;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-pokemon: var(--pokemon);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -18,6 +20,7 @@
     --foreground: #ededed;
   }
 }
+
 
 body {
   background: var(--background);
